fix(root): disable SHM fast path on MediaTek devices — ART truncates raw addresses in Unsafe volatile ops, SIGSEGV in ServiceGoRootBo